<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2" >

            <EditText
                android:id="@+id/pret_contact_EditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/pret_hint_contact" >

                <requestFocus />
            </EditText>

            <ImageButton
                android:id="@+id/choix_contact_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center_horizontal"
                android:layout_row="0"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/desc_butt_contact"
                android:onClick="onClickContact"
                android:src="@drawable/ic_social_person"
                android:text="@string/choix_contact_Button" />

            <EditText
                android:id="@+id/pret_date_EditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/pret_hint_date"
                android:inputType="date" />

            <ImageButton
                android:id="@+id/pret_date_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="right"
                android:layout_row="1"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/desc_butt_date"
                android:onClick="showDatePickerDialog"
                android:src="@drawable/ic_menu_new"
                android:text="@string/choix_date_Button" />
        </GridLayout>

        <EditText
            android:id="@+id/pret_objet_EditText"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/pret_hint_objet"
            android:inputType="text" />

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2" >

            <TextView
                android:id="@+id/label_image"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_gravity="bottom|left|center|fill"
                android:layout_row="0"
                android:gravity="center_horizontal"
                android:text="@string/label_choisir_image"
                android:textSize="14dp" />

            <ImageButton
                android:id="@+id/pret_image_Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_gravity="bottom|left"
                android:layout_row="0"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/desc_butt_image"
                android:onClick="showImageDialog"
                android:src="@drawable/ic_new_picture"
                android:text="@string/choix_image_Button" />

            <TextView
                android:id="@+id/label_photo"
                android:layout_column="0"
                android:layout_gravity="left"
                android:layout_row="1"
                android:text="@string/label_prendre_photo"
                android:textSize="14dp" />

            <ImageButton
                android:id="@+id/pret_camera_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="left"
                android:layout_row="1"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/desc_butt_camera"
                android:onClick="showCamera"
                android:src="@drawable/ic_camera"
                android:text="@string/choix_camera_Button" />

            <Space
                android:layout_width="42dp"
                android:layout_height="1dp"
                android:layout_column="0"
                android:layout_row="0" />
        </GridLayout>

        <ImageView
            android:id="@+id/pret_image"
            android:layout_width="match_parent"
            android:layout_height="236dp"
            android:layout_gravity="right"
            android:contentDescription="@string/pret_hint_image"
            android:hint="@string/pret_hint_image"
            android:src="@drawable/ic_launcher" />
    </LinearLayout>

</ScrollView>