<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="3"
    android:rowCount="4" >

    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_column="0"
        android:layout_rowSpan="4"
        android:contentDescription="@string/image_popup_detail"
        android:src="@drawable/ic_launcher" 
        android:padding="5dp"/>

    <TextView
        android:id="@+id/nom"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/objet"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_row="1"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/date"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_row="2"
        android:textSize="12dp" />

    <ImageButton
        android:id="@+id/popup_envoi_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="3"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/popup_descr_sms"
        android:onClick="envoyerSMS"
        android:src="@drawable/ic_send_sms"
        android:text="@string/popup_sms_Button" />

    <ImageButton
        android:id="@+id/popup_envoi_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_gravity="left"
        android:layout_row="3"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/popup_descr_email"
        android:onClick="envoyerEmail"
        android:src="@drawable/ic_send_email"
        android:text="@string/popup_email_Button" />

</GridLayout>